--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.2.3",
     "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
